fixing aligning

--- a/src/components/BaseLayout/Navbar/navbar.css
+++ b/src/components/BaseLayout/Navbar/navbar.css
@@ -3,13 +3,15 @@
     position: fixed;
     z-index: 2;
     top: 0;
-    padding: 30px 0 30px 10%;
+    padding: 30px 0;
     background-color: var(--main-bg-color);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     width: 100%;
     transition: background-color 0.7s ease-in-out;
+}
+.header-navbar .container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .header-navbar ul{
     position: relative;
