--- a/src/components/BaseLayout/ThisWeek/thisWeek.css
+++ b/src/components/BaseLayout/ThisWeek/thisWeek.css
@@ -1,12 +1,10 @@
 
 section.thisWeek{
+    position: relative;
     display: flex;
     align-items: flex-start;
-    align-self: flex-end;
-    width: 90%;
 }
 .thisWeek__title{
-    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,4 +12,11 @@ section.thisWeek{
 }
 .thisWeek__title h3{
     font-weight: 600;
+}
+.thisWeek .container{
+    flex-direction: row;
+    align-items: flex-start;
+}
+.thisWeek .thisWeek_slider{
+    overflow: hidden;
 }
