--- a/src/components/BaseLayout/style.css
+++ b/src/components/BaseLayout/style.css
@@ -65,3 +65,6 @@ hr{
 ::-webkit-scrollbar-thumb {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
+* {
+    cursor: none;
+}
